Fix message spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -142,6 +142,10 @@ header.govuk-header--yellow .govuk-phase-banner {
   padding: 15px;
 }
 
+.govuk-chat-answer p {
+  margin-top: 0;
+}
+
 .govuk-link--bold {
   font-weight: bold;
 }
